tests/outref/TDF000.ref

-- TDF000 : OCTO345 : DROP FUNCTION works with existing functions (ABS)

SELECT ABS(-1) FROM names;
DROP FUNCTION ABS;
SELECT ABS(-1) FROM names;

1
1
1
1
1
1
[ERROR] PATH:LINENUM DATE TIME : Unknown function: ABS
Error with syntax near (line 1, column 8):

SELECT ABS(-1) FROM names;
       ^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT ABS(-1) FROM names;

Successfully cleared ^%ydboctoocto("functions","ABS")
Successfully deleted function "ABS" from pg_catalog.pg_proc
